uv统计去重播放量, redis setnx统计播放量,新增playCount 定时20s落库;初始化AOP登录校验